--- a/내장웹서버.md
+++ b/내장웹서버.md
@@ -132,3 +132,20 @@ public class PortListener implements ApplicationListener<ServletWebServerInitial
 
 제대로 찍힌 것을 알 수 있고 undertow가 실행되고 바로 출력이 저 이벤트가 실행 된 것을 알 수 있다.
 
+
+
+### HTTPS
+
+
+
+우선 개인키를 생성해야한다.
+
+터미널에서 개인키를 생성 방법은 keytool을 사용하면 된다.
+
+```terminal
+keytool -genkey -alias tomcat -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 400
+```
+
+
+
+생성이 완료되면 해당 디렉토리에 keystore.p12라는 개인키가 생성이 된다.
