--- a/ORM/다양한 연관관계 매핑.md
+++ b/ORM/다양한 연관관계 매핑.md
@@ -131,7 +131,7 @@ private List<Member> members = new ArrayList<>();
 
 #### 3) 일대다 양방향
 
-<img src="img/image-20211031054203606.png" alt="image-20211031054203606" style="width:50%;" />
+<img src="img/image-20211031054203606.png" alt="image-20211031054203606" style="width:70%;" />
 
 
 
@@ -175,7 +175,7 @@ private List<Member> members = new ArrayList<>();
 
 #### 2) 주 테이블에 외래 키 단방향
 
-<img src="img/image-20211031054924855.png" alt="image-20211031054924855" style="width:50%;" />
+<img src="img/image-20211031054924855.png" alt="image-20211031054924855" style="width:70%;" />
 
 - Member가 주 테이블
 
@@ -198,7 +198,7 @@ private List<Member> members = new ArrayList<>();
 
 #### 4)  주 테이블에 외래 키 양방향
 
-<img src="img/image-20211031055151407.png" alt="image-20211031055151407" style="width:50%;" />
+<img src="img/image-20211031055151407.png" alt="image-20211031055151407" style="width:70%;" />
 
 - **다대일 양방향처럼 외래 키가 있는 곳이 연관관계의 주인**
 
@@ -217,7 +217,7 @@ private List<Member> members = new ArrayList<>();
 
 #### 5) 대상 테이블에 외래 키 단방향
 
-<img src="img/image-20211031055250264.png" alt="image-20211031055250264" style="width:50%;" />
+<img src="img/image-20211031055250264.png" alt="image-20211031055250264" style="width:70%;" />
 
 - 단방향 관계는 JPA에서 지원 X
 - 양방향 관계는 지우너
@@ -226,7 +226,7 @@ private List<Member> members = new ArrayList<>();
 
 #### 6) 대상 테이블에 외래 키 양방향
 
-<img src="img/image-20211031055903489.png" alt="image-20211031055903489" style="width:50%;" />
+<img src="img/image-20211031055903489.png" alt="image-20211031055903489" style="width:70%;" />
 
 - 일대일 매핑은 간단하게 내가 내 것만 관리할 수 있다.
 - Locker에 member를 주인으로 만들어 관리하고 Member의 locker를 읽기 전용으로 만들면된다.
@@ -247,3 +247,80 @@ private List<Member> members = new ArrayList<>();
   - 전통적인 데이터베이스 개발자 선호
   - 장점: 주 테이블과 대상 테이블을 일대일에서 일대다 관계로 변경할 때 테이블 구조 유지
   - 단점: 프록시 기능의 한계로 **지연 로딩으로 설정해도 항상 즉시 로딩됨**(프록시는 뒤에서 설명)
+
+
+
+## 4. 다대다[N:N]
+
+- 관계형 데이터 베이스는 정규화된 테이블 2개로 다대다 관계를 표현할 수 없음
+- 연결 테이블(중간 테이블)을 추가해서 일대다, 다대일 관계로 풀어내야함
+
+<img src="img/image-20211031061651932.png" alt="image-20211031061651932" style="width:70%;" />
+
+- 객체는 컬렉션을 사용해서 객체 2개로 다대다 관계 가능
+
+  <img src="img/image-20211031061730232.png" alt="image-20211031061730232" style="width:70%;" />
+
+- @ManyToMany 사용
+
+- @JoinTable로 연결 테이블 지정(중간 테이블)
+
+- ```java
+  //Member.class
+  @ManyToMany
+  @JoinTable(name = "MEMBER_PRODUCT")
+  private List<Product> products = new ArrayList<>;
+  ```
+
+- 다대다 매핑 : 단방향, 양방향 가능
+
+
+
+#### 1) 다대다 매핑의 한계
+
+- **편리해 보이지만 실무에서 사용X**
+
+- 연결 테이블이 단순히 연결만 하고 끝나지 않음
+
+  - 주문시간, 수량같은 데이터가 들어올 수 있음
+
+  - 추가 정보를 연결 테이블에 넣기가 안된다.
+
+  - 쿼리도 내가 생각하지 못한 쿼리가 날라간다.
+
+    
+
+#### 2) 한계 극복
+
+- 연결 테이블용 엔티티 추가(연결테이블을 엔티티로 승격)
+
+- @ManyToMany -> @OneToMany, @ManyToOne
+
+- ```java
+  //Member.class
+  @OneToMany(mappedBy = "member")
+  private List<MemberProduct> memberProducts = new ArrayList<>();
+  ```
+
+  ```java
+  //MemberProduct.class
+  
+  @ManyToOne
+  @JoinColumn(name = "MEMBER_ID")
+  private Member member;
+  
+  @ManyToOne
+  @JoinColumn(name = "PRODUCT_ID")
+  private Product product;
+  ```
+
+  ```java
+  //Product.class
+  @OneToMany(mappedBy = "product")
+  private List<MemberProduct> memberProducts = new ArrayList<>();
+  ```
+
+  
+
+<img src="img/image-20211031062352382.png" alt="image-20211031062352382" style="width:70%;" />
+
