--- a/ORM/다양한 연관관계 매핑.md
+++ b/ORM/다양한 연관관계 매핑.md
@@ -324,3 +324,5 @@ private List<Member> members = new ArrayList<>();
 
 <img src="img/image-20211031062352382.png" alt="image-20211031062352382" style="width:70%;" />
 
+- 추가로 **@GenerateValue를 사용하여 의미없는 값인 ORDER_ID를 따로 사용**하는 것을 권장 PK와 FK를 묶어사 사용하는 것은 비추천
+
