--- a/SecondProject/md파일들/게시물수정삭제.md
+++ b/SecondProject/md파일들/게시물수정삭제.md
@@ -301,7 +301,7 @@ public class BoardService {
                          }
   ```
 
-- `Principal principal`을 인자로 추가하고 getName을 사용함으로써 현재 로그인한 계정 loginId를 알 수가 있다.
+- `Principal principal`을 인자로 추가하고 getName을 사용함으로써 현재 로그인한 계정 nickname를 알 수가 있다.
 
 - 또한 `Authentication authentication`을 인자로 가져올 수도 있다.
 
