--- a/SecondProject/md파일들/게시물등록.md
+++ b/SecondProject/md파일들/게시물등록.md
@@ -9,7 +9,7 @@ public interface BoardRepository extends JpaRepository<Board, Long>{
 }
 ```
 
-//BoardService.java
+//BoardService.javaw
 
 ```java
 package com.example.secondproject.service;
