--- a/Spring/Project/CIDS_Docs/기능 명세서.md
+++ b/Spring/Project/CIDS_Docs/기능 명세서.md
@@ -7,7 +7,8 @@
 3. [게시판](#게시판)
 4. [댓글](#댓글)
 5. [Spring Security](#Spring-Security)
-6. [예외 처리](#예외-처리)
+6. [Multiple Database](Multiple-Database)
+7. [예외 처리](#예외-처리)
 
 ## 침해 의심 사이트 탐지
 
@@ -35,9 +36,43 @@
 
 ## 게시판
 
+### 1. 게시글 조회
 
+<img src="img/기능 명세서/image-20221220172050948.png" alt="image-20221220172050948" style="zoom:50%;" />
+
+
+
+
+
+### 2. 게시글 단건 조회
+
+
+
+### 3. 게시글 쓰기
+
+
+
+### 4. 게시글 수정
+
+
+
+### 5. 게시글 삭제
 
 ## 댓글
+
+### 1. 댓글 리스트 조회
+
+
+
+### 2. 댓글, 대댓글 쓰기
+
+
+
+### 3. 댓글, 대댓글 수정
+
+
+
+### 4. 댓글, 대댓글 삭제
 
 
 
