Docs: 기능명세서

--- a/Spring/Project/CIDS_Docs/기능 명세서.md
+++ b/Spring/Project/CIDS_Docs/기능 명세서.md
@@ -46,7 +46,7 @@
 
 ### 2. 게시글 단건 조회
 
-
+<img src="img/기능 명세서/Screenshot of IntelliJ IDEA (2022-12-20 5-33-18 PM).png" alt="Screenshot of IntelliJ IDEA (2022-12-20 5-33-18 PM)" style="zoom:50%;" />
 
 ### 3. 게시글 쓰기
 
