Docs: 기능명세서

--- a/Spring/Project/CIDS_Docs/기능 명세서.md
+++ b/Spring/Project/CIDS_Docs/기능 명세서.md
@@ -42,7 +42,7 @@
 
 
 
-
+<img src="img/기능 명세서/Screenshot of Typora (2022-12-20 5-39-17 PM).png" alt="Screenshot of Typora (2022-12-20 5-39-17 PM)" style="zoom:50%;" />
 
 ### 2. 게시글 단건 조회
 
